specs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: kieron
  name: kieron-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kieron-pod
  template:
    metadata:
      labels:
        app: kieron-pod
    spec:
      containers:
      - name: container1
        image: kieronekron/kubernetes-boot-camp:latest
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            httpHeaders:
            - name: X-Custom-Header
              value: Awesome
          initialDelaySeconds: 3
          periodSeconds: 3
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: "100Mi"
          requests:
            memory: "20Mi"
