specs/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kieron-pod
  labels:
    app: kieron-pod
spec:
  containers:
  - name: container1
    image: kieronekron/kubernetes-boot-camp:v1
    imagePullPolicy: Always
    ports:
    - containerPort: 3000
    resources:
      limits:
        memory: "100Mi"
      requests:
        memory: "20Mi"
