specs/service2.yaml
kind: Service
apiVersion: v1
metadata:
  name: kieron-service-2
spec:
  selector:
    app: kieron-pod-2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
